== 0.2.2 2010-11-01

* 1 minor enhancement
  * Flatten incoming Point coordinates so that we can pass them as an array as well

== 0.2.1 2010-11-01

* 1 minor enhancement
  * Add Point#data, which is set to the options hash from the initializer

== 0.2.0 2010-11-01

* 1 major enhancement:
  * Clustering & Points now support N dimensions (up from 2)
* 1 minor enhancement:
  * Switch to jeweler

== 0.1.5 2008-03-21

* 1 minor enhancement:
  * added cluster radius
* 1 new example script:
  * demonstrates SVG rendering of points and clusters

== 0.1.4 2008-02-13

* 1 minor enhancement:
  * gave linear-time preclustering an independent "resolution" parameter
* 1 bugfix:
  * corrected cluster coordinate calculation

== 0.1.3 2008-02-10

* 1 performance improvement
  * added linear-time preclustering based on minimum separation distance
* 1 major change:
  * when minimum separation is given, the clusterer will no longer calculate
    and return clusters smaller than "separation / 2.0"

== 0.1.2 2008-02-07

* 1 performance improvement
  * refactored Distances to be more intelligent about precalculated values
* 1 bugfix:
  * correct degenerate case of Hierclust::Point.points

== 0.1.1 2008-02-04

* 1 minor enhancement:
  * add method for returning flattened list of points in a cluster
* 1 bugfix:
  * correct intermittent failure of Clusterer spec

== 0.1.0 2008-02-01

* 1 major enhancement:
  * Initial release