@@ -16,9 +16,9 @@ module Hierclust
     # clustered, but will be put into clusters based strictly on coordinates.
     # The clusters generated by this "pre-clustering" will then be
     # hierarchically clustered as normal.
-    def initialize(data, separation = nil, resolution = nil)
-      @separation = separation
-      @resolution = resolution
+    def initialize(data, options = {})
+      @separation = options.delete(:separation)
+      @resolution = options.delete(:resolution)
       @data = precluster(data)
       @distances = Distances.new(@data)
     end
